--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@capacitor/android": "^5.4.1",
     "@capacitor/cli": "^5.4.1",
     "@capacitor/core": "^5.4.1",
+    "@capacitor/filesystem": "^5.1.4",
     "lodash": "^4.17.21",
     "primeng": "^16.3.1",
     "rxjs": "~7.8.0",
@@ -34,6 +35,7 @@
     "@angular/compiler-cli": "^16.2.5",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.14.198",
+    "@types/node": "^20.8.0",
     "@types/uuid": "^9.0.2",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
