--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,14 @@
 /out-tsc
 /bazel-out
 
-/android
-
+/android/*
+!/android/app
+/android/app/*
+!/android/app/src
+/android/app/src/*
+!/android/app/src/main
+/android/app/src/main/*
+!/android/app/src/main/AndroidManifest.xml
 
 # Node
 /node_modules
